Some JS and CSS bugs squashed
Fixed max-heights for vh-classes losing padding on mobile.

--- a/craft/templates/scss/_viewport-height.scss
+++ b/craft/templates/scss/_viewport-height.scss
@@ -3,15 +3,15 @@
 $height: 5;
 $height-distances: 10;
 
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(sm) {
  @for $i from 0 through $height-distances {
     .vh-#{($i*$height)+50} {
-      height: 50vh;
+      height: 55vh;
     }
   }
 }
 
-@include media-breakpoint-up(lg) {
+@include media-breakpoint-up(md) {
   @for $i from 0 through $height-distances {
     .vh-#{($i*$height)+50} {
       height: (($i*$height)+50)+vh;
